fixed bug with code block text not wrapping

--- a/docs/app/core/styles/markdown.scss
+++ b/docs/app/core/styles/markdown.scss
@@ -96,7 +96,9 @@ pre {
     margin: 0.85rem 0;
     background-color: #282c34;
     border-radius: 0.25rem;
-    overflow: auto;
+    overflow: hidden;
+
+    white-space: pre-wrap;
 
     max-width: 100%;
     width: 100%;
